webui: Add sequential download context menu

--- a/src/webui/html/index.html
+++ b/src/webui/html/index.html
@@ -97,6 +97,7 @@
 		<li><a href="#prioBottom"><img src="theme/go-bottom"/> _(Move to bottom)</a></li>
 	</ul>
 	</li>
+	<li><a href="#seqDownload">_(Sequential download)</a>
 	<li class="separator"><a href="#DownloadLimit"><img src="images/skin/download.png"/> _(Limit download rate...)</a></li>
 	<li><a href="#UploadLimit"><img src="images/skin/seeding.png"/> _(Limit upload rate...)</a></li>
 	<li class="separator"><a href="#ForceRecheck"><img src="theme/document-edit-verify"/>  _(Force recheck)</a></li>
