--- a/src/webui/html/transferlist.html
+++ b/src/webui/html/transferlist.html
@@ -57,6 +57,9 @@
                         },
                         DownloadLimit: function(element, red) {
                                 downloadLimitFN();
+                        },
+                        seqDownload: function(element, ref) {
+                                seqDownloadFN();
                         }
 		},
 		offsets: { x:-15, y:2 }
